--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -35,6 +35,12 @@
         {{ end }}
     </div>
 
+    <div class="hidden lg:block lg:col-span-3">
+        <div class="sticky top-8 space-y-8">
+            {{ partial "sidebar.html" . }}
+            {{ partial "calendar.html" . }}
+        </div>
+    </div>
     {{ partial "tag_sidebar.html" . }}
     </div>
 {{ end }}
