--- a/layouts/posts/list.html
+++ b/layouts/posts/list.html
@@ -25,6 +25,12 @@
             {{ partial "pagination.html" . }}
         </main>
     </div>
+    <div class="hidden lg:block lg:col-span-3">
+        <div class="sticky top-8 space-y-8">
+            {{ partial "sidebar.html" . }}
+            {{ partial "calendar.html" . }}
+        </div>
+    </div>
     {{ partial "tag_sidebar.html" . }}
     </div>
 {{ end }}
