--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -35,7 +35,7 @@
         {{ end }}
     </div>
 
-    <div class="hidden lg:block lg:col-span-3">
+    <div class="hidden lg:block lg:w-1/4 lg:ml-8">
         <div class="sticky top-8 space-y-8">
             {{ partial "sidebar.html" . }}
             {{ partial "calendar.html" . }}
