--- a/layouts/posts/list.html
+++ b/layouts/posts/list.html
@@ -25,7 +25,7 @@
             {{ partial "pagination.html" . }}
         </main>
     </div>
-    <div class="hidden lg:block lg:col-span-3">
+    <div class="hidden lg:block lg:w-1/4 lg:ml-8">
         <div class="sticky top-8 space-y-8">
             {{ partial "sidebar.html" . }}
             {{ partial "calendar.html" . }}
